--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,8 @@ body {
                 color: $textColor;
             }
 
-            button {
+            button,
+            #reset {
                 color: $textColor1;
                 font-size: 18px;
                 background-color: $bgColorElement1;
@@ -60,7 +61,9 @@ body {
                 padding: 10px 30px;
             }
 
-            button:hover {
+
+            button,
+            #reset:hover {
                 cursor: pointer;
             }
         }
