--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 4%;
-  max-width: 1000px;
-  margin: 40px calc(50% - 500px);
+  width: 1200px;
+  margin: 40px calc(50% - 600px);
 }
 
 body .left_clm {
@@ -205,4 +205,79 @@ body .right_clm #list .entry .actions img:hover {
 
 body .right_clm #list .entry:hover {
   opacity: 1;
+}
+
+@media (max-width: 1200px) {
+  body {
+    width: 800px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
+  }
+  body .left_clm,
+  body .right_clm {
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    width: 650px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
+  }
+  body .left_clm,
+  body .right_clm {
+    width: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  body {
+    width: 450px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
+  }
+  body .left_clm,
+  body .right_clm {
+    width: 100%;
+  }
+  body .right_clm .titles {
+    display: none;
+  }
 }
