--- a/style.css
+++ b/style.css
@@ -281,3 +281,30 @@ body .right_clm #list .entry:hover {
     display: none;
   }
 }
+
+@media (max-width: 450px) {
+  body {
+    width: 350px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
+  }
+  body .left_clm,
+  body .right_clm {
+    width: 100%;
+  }
+  body .right_clm .titles {
+    display: none;
+  }
+}
