--- a/style.css
+++ b/style.css
@@ -317,6 +317,10 @@ body .right_clm #list .entry:hover {
             flex-direction: column;
     gap: 5px;
   }
+  body .right_clm .filters:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
   body #list,
   body .entry,
   body .actions {
