--- a/style.scss
+++ b/style.scss
@@ -266,7 +266,7 @@ body {
             }
 
             .filters:hover {
-                transform: scale(1.05);
+                transform: scale(1)
             }
         }
 
