--- a/style.css
+++ b/style.css
@@ -209,6 +209,34 @@ body .right_clm #list .entry:hover {
 
 @media (max-width: 1200px) {
   body {
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
+    width: 1000px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
+  }
+  body .left_clm,
+  body .right_clm {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
     width: 800px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -233,31 +261,9 @@ body .right_clm #list .entry:hover {
 
 @media (max-width: 800px) {
   body {
-    width: 650px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 50px;
-    margin: 0px;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -30%);
-            transform: translate(-50%, -30%);
-  }
-  body .left_clm,
-  body .right_clm {
-    width: 100%;
-  }
-}
-
-@media (max-width: 650px) {
-  body {
-    width: 450px;
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
+    width: 600px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -282,8 +288,10 @@ body .right_clm #list .entry:hover {
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
   body {
+    -webkit-transition: width 0.5s;
+    transition: width 0.5s;
     width: 350px;
     display: -webkit-box;
     display: -ms-flexbox;
