--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   gap: 4%;
   width: 1200px;
   margin: 40px calc(50% - 600px);
-  -webkit-animation: backgroundImages 15s linear infinite;
-          animation: backgroundImages 15s linear infinite;
+  -webkit-animation: backgroundImages 40s ease-in-out infinite;
+          animation: backgroundImages 40s ease-in-out infinite;
 }
 
 @-webkit-keyframes backgroundImages {
